<resources>
    <string name="app_name" translatable="false">Quotation Shake</string>
    <string name="random_quotations">Random quotations</string>
    <string name="favourite_quotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- About -->
    <string name="infoApp">Quotation Shake by\n\nAngel Romero Molina\n\nanromo1@inf.upv.es\n\nDeveloped for DADM 2022</string>

    <!-- Settings -->
    <string name="nameIndentifiesUser">Name that identifies the user</string>
    <string name="insertName">Insert your name</string>
    <string name="quotationsSelectedLanguage">Get quotations in the selected language</string>
    <string name="requestQuotationsHTTPMethod">Request quotations using the selected HTTP method</string>
    <string name="get" translatable="false">GET</string>
    <string name="post" translatable="false">POST</string>

    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="russian">Russian</string>

    <string name="settings_textfield_username_title">Textfield username</string>
    <string name="settings_textfield_username_description">Textfield used to specify the user\'s name</string>
    <string name="settings_cattegory_httpmethods_title">Cattegory of HTTP methods</string>
    <string name="settings_cattegory_httpmethods_description">Cattegory with different http methods to use when we request a new quote</string>
    <string name="unable_get_quote">Unable to get a new quote. Please, try again!</string>

    <!-- Favourite Quotations -->
    <string name="authorInfo">Author info</string>
    <string name="mockQuotation" translatable="false">This is a Mock Quotation for testing. Mock number</string>
    <string name="clearAll">Clear All</string>

    <string name="confirmClearAllDialogMessage">Are you sure that you want to delete ALL your favourite quotations?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="author_impossible_not_possible_info">The author is anonymous. Author info is not available.</string>
    <string name="confirmDeleteDialog">Are you sure that you want to delete this quotation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quote_deleted">Quotation has been deleted.</string>
    <string name="undo">Undo</string>

    <!-- Random Quotations -->
    <string name="welcomeMessage">Hello %1s! Press Refresh to get a new quotation</string>
    <string name="sampleQuotation">Sample quotation %1sd</string>
    <string name="sampleAutor">Sample autor %1sd</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="device_not_connected">The device is not connected to the Internet. Unable to get new quotes.</string>
</resources>